--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,111 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.content {
+  width: 100%;
+  height: 100%;
+  background-color: antiquewhite;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+}
+
+
+button {
+  font-size: 0.8rem;
+  padding: 0.2rem;
+  margin: 0.1rem;
+  border-radius: 0.5rem;
+  border: 0.1rem #404040 solid;
+  width: 100%;
+  cursor: pointer;
+}
+
+.cart {
+  display: flex;
+}
+
+.row {
+  display: flex;
+  justify-content: space-between;
+}
+
+.col-1 {
+  flex: 1;
+}
+
+.col-2 {
+  flex: 2;
+}
+
+.block{
+  background-color:antiquewhite;
+  padding: 1rem;
+  margin: 0.5rem;
+  border-radius: 0.5rem;
+}
+
+.row.center {
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+img.small{
+  max-height: 20rem;
+  margin-right: 1rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.details{
+  padding: 2rem;
+}
+
+.btn-wide {
+  background-color: #f0c040;
+}
+
+.space-between{
+  justify-content: space-around;
+}
+
+.detail_buttons{
+  margin-top: 1rem ;
+  justify-content: flex-start;
+}
+
+.detail_buttons button {
+  margin-right: 1rem;
+}
+
+.detail_types{
+  margin-bottom: 1rem;
+}
+.active {
+  background-color: #f0c040;
+}
+
+.cart-btn {
+  display: flex;
+  margin-left: 2rem;
+  justify-content:flex-start;
+  align-items: center;
+}
+
+.text-right {
+  text-align: right;
+}
+
+button.add {
+  background-color: #40c0f0;
+  width: 1.5rem;
+}
+button.remove {
+  background-color: #f04040;
+  width: 1.5rem;
+}
+button.badge {
+  background-color: #f04040;
+  border: none;
+  color: #ffffff;
+  width: 1.5rem;
 }
